--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "require-dev": {},
   "autoload": {
     "psr-4": {
-      "PHPSandbox\\Echo\\": "src/"
+      "PHPSandbox\\Echoe\\": "src/"
     }
   }
 }
